deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: echoserver
  template:
    metadata:
      labels:
        component: echoserver
    spec:
      containers:
        - name: echoserver
          image: k8s.gcr.io/echoserver:1.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 20m
              memory: 32Mi
              ephemeral-storage: 16Mi
            requests:
              cpu: 20m
              memory: 32Mi
