service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service
spec:
  type: ClusterIP
  selector:
    component: echoserver
  ports:
    - port: 8080
      name: http
      targetPort: 8080
