ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-ing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: echoserver.vcap.me
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echoserver-service
                port:
                  # number: 8080
                  name: http
